--- a/templates/blank_template.html
+++ b/templates/blank_template.html
@@ -36,7 +36,9 @@ body {font-size:16px;}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
+    {% block content %}
 
+    {% endblock %}
 
 <!-- End page content -->
 </div>
