--- a/templates/blank_template.html
+++ b/templates/blank_template.html
@@ -20,8 +20,10 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><b>Hearthstone<br>Deck Builder</b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="{% url 'HSDT:cards' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cards</a>
-    <a href="{% url 'HSDT:decks' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Decks</a>
+      <a href="{% url 'HSDT:login' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">LOG IN</a>
+      <a href="{% url 'HSDT:cards' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cards</a>
+      <a href="{% url 'HSDT:decks' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Decks</a>
+      <a href="{% url 'HSDT:logout' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">LOG OUT</a>
   </div>
 </nav>
 
