--- a/templates/cards.html
+++ b/templates/cards.html
@@ -35,6 +35,18 @@
                   </div>
                   </div>
               </td>
+              <td>
+                  <div class="w3-row-padding">
+                    <div class="w3-half">
+
+
+                          {% for card in Base %}
+                                  <img src="{{ card.img }}" style="width:400px;height: 250px" onclick="onClick(this)" alt="Logo Witchwood">
+                          {% endfor %}
+
+                  </div>
+                  </div>
+              </td>
           </tr>
       </table>
   <h1 class="w3-xxxlarge w3-text-red"><b>Show all cards</b></h1>
