--- a/templates/blank_template.html
+++ b/templates/blank_template.html
@@ -22,6 +22,9 @@ body {font-size:16px;}
   <div class="w3-bar-block">
         <a href="{% url 'HSDT:cards' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cards</a>
         <a href="{% url 'HSDT:decks' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Decks</a>
+        <a href="{% url 'HSDT:create_deck' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Create new Deck</a>
+        <a href="{% url 'HSDT:signup' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Signup</a>
+        <a href="{% url 'logout' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Logout</a>
   </div>
 </nav>
 
