--- a/templates/deck_detail.html
+++ b/templates/deck_detail.html
@@ -18,7 +18,7 @@
         <tr>
             <td style="width: 70%">{{ deck_description }}</td>
             <td style="width: 100px">&#160;</td>
-            <td>Image of the deck.</td>
+            <td><img src="{{ deck_image }}" alt="Error"/></td>
         </tr>
         <tr></tr>
         <tr>
