Decks associats amb usuaris i form decks crea sol

--- a/templates/create_deck.html
+++ b/templates/create_deck.html
@@ -7,44 +7,21 @@
               <td>
                   <div class="w3-row-padding">
                     <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_06a.jpg"  %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_06a.jpg" style="width:200px;height: auto" alt="Logo Boomsday"/></a>
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_06a.jpg"  clase='0' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_06a.jpg" style="width:200px;height: auto" alt="Logo Boomsday"/></a>
                   </div>
                   </div>
               </td>
               <td>
                   <div class="w3-row-padding">
                     <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_05a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_05a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_05a.jpg"  clase='1' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_05a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
                   </div>
                   </div>
               </td>
               <td>
                   <div class="w3-row-padding">
                     <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_08a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_08a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
-                  </div>
-                  </div>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <div class="w3-row-padding">
-                    <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_04a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_04a.jpg" style="width:200px;height: auto" alt="Logo Boomsday"/></a>
-                  </div>
-                  </div>
-              </td>
-              <td>
-                  <div class="w3-row-padding">
-                    <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_09a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_09a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
-                  </div>
-                  </div>
-              </td>
-              <td>
-                  <div class="w3-row-padding">
-                    <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_03a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_03a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_08a.jpg" clase='2' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_08a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
                   </div>
                   </div>
               </td>
@@ -53,21 +30,44 @@
               <td>
                   <div class="w3-row-padding">
                     <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_02a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_02a.jpg" style="width:200px;height: auto" alt="Logo Boomsday"/></a>
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_04a.jpg" clase='3' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_04a.jpg" style="width:200px;height: auto" alt="Logo Boomsday"/></a>
                   </div>
                   </div>
               </td>
               <td>
                   <div class="w3-row-padding">
                     <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_07a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_07a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_09a.jpg" clase='4' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_09a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
                   </div>
                   </div>
               </td>
               <td>
                   <div class="w3-row-padding">
                     <div class="w3-half">
-                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_01a.jpg" %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_01a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_03a.jpg" clase='5' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_03a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
+                  </div>
+                  </div>
+              </td>
+          </tr>
+          <tr>
+              <td>
+                  <div class="w3-row-padding">
+                    <div class="w3-half">
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_02a.jpg" clase='6' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_02a.jpg" style="width:200px;height: auto" alt="Logo Boomsday"/></a>
+                  </div>
+                  </div>
+              </td>
+              <td>
+                  <div class="w3-row-padding">
+                    <div class="w3-half">
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_07a.jpg" clase='7' %}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_07a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
+                  </div>
+                  </div>
+              </td>
+              <td>
+                  <div class="w3-row-padding">
+                    <div class="w3-half">
+                        <a href="{% url 'HSDT:deck_name' image="https://art.hearthstonejson.com/v1/256x/HERO_01a.jpg" clase='8'%}" ><img src="https://art.hearthstonejson.com/v1/256x/HERO_01a.jpg" style="width:200px;height: auto" alt="Logo Witchwood"></a>
                   </div>
                   </div>
               </td>
