--- a/templates/deck_form.html
+++ b/templates/deck_form.html
@@ -2,10 +2,18 @@
 {% block content %}
     <div class="w3-container" style="margin-top:80px" id="expansions div">
         <h1 class="w3-jumbo"><b>Crear Deck</b></h1>
-    <form class = "deck-form" action="{%url 'HSDT:save_deck'  %}" method="post">
-    {% csrf_token %}
-    {{ form}}
-    <input type="submit" value="Crear Deck"/>
-    </form>
+        <form class = "deck-form" action="{%url 'HSDT:save_deck' %}" method="post">
+            {% csrf_token %}
+            <table>
+                <tr>
+                    {{ form }}
+                </tr>
+            </table>
+            <input type="submit" value="Crear Deck"/>
+        </form>
     </div>
+    <script language="JavaScript">
+        document.getElementById("id_image").style.visibility = "hidden";
+        document.getElementById("id_author").style.visibility = "hidden";
+    </script>
 {% endblock %}
