--- a/templates/deck_modify_form.html
+++ b/templates/deck_modify_form.html
@@ -1,8 +1,19 @@
 {% extends 'blank_template.html' %}
 {% block content %}
-    <form class = "deck-form" action="{%url 'HSDT:save_modifications'  %}" method="post">
-    {% csrf_token %}
-    {{ form}}
-    <input type="submit" value="Crear Deck"/>
-    </form>
+    <div class="w3-container" style="margin-top:80px" id="expansions div">
+        <h1 class="w3-jumbo"><b>Modificar Deck</b></h1>
+         <form class = "deck-form" action="{%url 'HSDT:save_modifications'  %}" method="post">
+        {% csrf_token %}
+            <table>
+                <tr>
+                    {{ form }}
+                </tr>
+            </table>
+        <input type="submit" value="Modificar Deck"/>
+        </form>
+    </div>
+    <script language="JavaScript">
+        document.getElementById("id_image").style.visibility = "hidden";
+        document.getElementById("id_author").style.visibility = "hidden";
+    </script>
 {% endblock %}
