Deck detail done

--- a/templates/deck_detail.html
+++ b/templates/deck_detail.html
@@ -11,7 +11,7 @@
             <tr>
                 <td>&#160;</td>
                 <td>&#160;</td>
-                <td><img src="{{ card.image }}" alt="{{ card.name }}"/></td>
+                <td><img src="{{ card.img }}" alt="{{ card.name }}" style="height:210px; width:auto"/></td>
             </tr>
         {% endfor %}
         <tr></tr>
