--- a/templates/team_profile.html
+++ b/templates/team_profile.html
@@ -6,7 +6,7 @@
         {% if not players_query %}
         <a href="{% url 'HSDT:join_team' user=user.pk  team=team.pk %}"><button style="background-color: chartreuse">Join Team</button></a>
         {% else %}
-            <a href="{% url 'HSDT:leave_team' user=user.pk team=team.pk %}"><button style="color: brown">Leave Team</button></a>
+            <a href="{% url 'HSDT:leave_team' user=user.pk team=team.pk %}"><button style="background-color: brown">Leave Team</button></a>
         {% endif %}
     {% endfor %}
 
